# local-llm-rag

./: .gitignore  Makefile  README.md  USAGE.md  ingest.py  project.code-workspace  pyproject.toml  query.py  requirements-ingest.txt  requirements-query.txt  requirements.txt  run_pipeline.py  test_empty_cleanup.py  test_ingest.py  test_marker.py  test_watch.py  watch.py
front/: pyproject.toml  requirements.txt  start.py
md-content-backup/test/: legal_1.md
md-content-backup/test/ok/: text1.md
services/ingest/: ingest.py  pyproject.toml  requirements.txt
services/query/: pyproject.toml  query.py  requirements.txt
services/watch/: pyproject.toml  requirements.txt  watch.py
services/watch/pdf_converter/: pdf_to_markdown.py  pyproject.toml  requirements.txt
